<resources>
    <string name="app_name">Teste Paggi</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_fechar">fechar</string>

    <!--navegacao-->
    <string name="screen_dashboard">Dashboard</string>
    <string name="screen_transacao">Transações</string>
    <string name="screen_nova_transacao">Nova transação</string>
    <string name="screen_pagamento">Pagamentos</string>
    <string name="screen_sobre"></string>

    <!--Itens menu-->
    <string name="menu_criar_transacao">Nova transação</string>
    <string name="menu_transacao">Transações</string>
    <string name="menu_pagamentos">Pagamentos</string>
    <string name="menu_sobre">Sobre o app</string>

    <!--Button string-->
    <string name="btn_detalhes">VER DETALHES</string>
    <string name="btn_nova_transacao">CRIAR NOVA</string>

    <!--Cards Dash-->
    <string name="dash_transacao_title">Transações</string>
    <string name="dash_transacao_desc">veja todas as suas transações</string>
    <string name="dash_pagamentos_title">Pagamentos</string>
    <string name="dash_pagamentos_desc">confira todos seus pagamentos</string>
    <string name="dash_nova_transacao_title">Nova transação</string>
    <string name="dash_nova_transacao_desc">cadastre uma nova transação</string>

    <string name="about_title">Sobre o teste da Paggi</string>
    <string name="about_version">Versão {var}</string>
    <string name="about_rights">\@ {var} Teste Paggi\ntodos os direitos reservados.</string>

    <!--Transacoes-->
    <string name="transacao_valor">valor transacionado</string>
    <string name="transacao_data">data para compensação</string>

    <!--Pagamentos-->
    <string name="pagamento_valor">valor total</string>
    <string name="pagamento_comepnsado">compensação em</string>
    <string name="pagamento_comepnsacao">compensação prevista</string>

    <!--Nova transacao-->
    <string name="novatransacao_valor_zerado">por favor, informe o valor da transação!</string>
    <string name="novatransacao_sucesso">transação inserida com sucesso!</string>

    <!--common strings-->
    <string name="lbl_valor_total">valor da transação</string>
    <string name="lbl_erro_valor">preencha o valor da transação</string>
    <string name="lbl_total_parcelas">parcelamento</string>
    <string name="amount_format">0,00</string>
    <string name="parcela_default">à vista</string>
    <string name="parcela_2x">2 vezes</string>
    <string name="parcela_3x">3 vezes</string>
    <string name="parcela_4x">4 vezes</string>
    <string name="parcela_5x">5 vezes</string>
    <string name="parcela_6x">6 vezes</string>
    <string name="parcela_7x">7 vezes</string>
    <string name="parcela_8x">8 vezes</string>
    <string name="parcela_9x">9 vezes</string>
    <string name="parcela_10x">10 vezes</string>
    <string name="parcela_11x">11 vezes</string>
    <string name="parcela_12x">12 vezes</string>
    <string name="default_var">{var}</string>

    <!--Empty State-->
    <string name="btn_retry">tente novamente</string>
    <string name="btn_conectar">conectar a internet</string>
    <string name="pagamento_empty">Não encontramos pagamentos para exibir!</string>
    <string name="cards_empty">Não encontramos cartões para realizar novas transações!</string>
    <string name="transacao_empty">Não encontramos transações para exibir!</string>
    <string name="server_timeout">O servidor não esta respondendo!</string>
    <string name="server_error">Ocorreu com nosso servidor!</string>
    <string name="nova_transacao_error">Não foi possível inserir uma nova transação.\nVerifique as informações e tente novamente.</string>
    <string name="no_connection">Você não esta conectado a internet!</string>

</resources>

