<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.com.testepaggi.ui.view.activity.TransacaoActivity">

    <include layout="@layout/transparent_toolbar_app" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:gravity="center_vertical|center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_title"
            android:textSize="@dimen/font_extra_big"
            android:layout_marginBottom="@dimen/margim_default"
            android:textColor="@color/red"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/txVersion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margim_small"
            android:text="@string/about_version"
            android:textSize="@dimen/font_big"
            android:textColor="@color/red"/>

        <TextView
            android:id="@+id/txRights"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/about_rights"
            android:textSize="@dimen/font_normal"
            android:textColor="@color/red"/>

    </LinearLayout>

</LinearLayout>
