<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/bg"
    tools:context="br.com.testepaggi.ui.view.activity.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/margim_default"
        android:paddingLeft="@dimen/margim_small"
        android:paddingRight="@dimen/margim_small"
        android:paddingBottom="@dimen/margim_default"
        android:weightSum="3">

        <android.support.v7.widget.CardView
            android:id="@+id/containerTransacao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="2dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/bg_card"
                android:weightSum="2">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingRight="@dimen/margim_default"
                    android:paddingLeft="@dimen/margim_default"
                    android:paddingTop="@dimen/margim_default"
                    android:layout_marginBottom="@dimen/margim_big"
                    android:gravity="center_vertical">

                    <ImageView
                        android:id="@+id/icTransacao"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_transaction"/>

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@id/icTransacao"
                        android:layout_marginLeft="@dimen/margim_default">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/dash_transacao_title"
                            android:textColor="@color/red"
                            android:textSize="@dimen/font_extra_big"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/dash_transacao_desc"
                            android:textColor="@color/red"
                            android:textSize="@dimen/font_normal"/>

                    </LinearLayout>

                </RelativeLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_size"
                    android:background="@drawable/margim_top_red_bg_default"
                    android:paddingRight="@dimen/margim_default"
                    android:gravity="right|center_vertical"
                    android:text="@string/btn_detalhes"
                    android:textSize="@dimen/font_normal"
                    android:textColor="@color/red"
                    android:textStyle="bold"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/containerPagamentos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margim_small"
            android:elevation="2dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/bg_card"
                android:weightSum="2">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingRight="@dimen/margim_default"
                    android:paddingLeft="@dimen/margim_default"
                    android:paddingTop="@dimen/margim_default"
                    android:layout_marginBottom="@dimen/margim_big"
                    android:gravity="center_vertical">

                    <ImageView
                        android:id="@+id/icPagamentos"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_payment"/>

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@id/icPagamentos"
                        android:layout_marginLeft="@dimen/margim_default">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/dash_pagamentos_title"
                            android:textColor="@color/red"
                            android:textSize="@dimen/font_extra_big"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/dash_pagamentos_desc"
                            android:textColor="@color/red"
                            android:textSize="@dimen/font_normal"/>

                    </LinearLayout>

                </RelativeLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_size"
                    android:background="@drawable/margim_top_red_bg_default"
                    android:paddingRight="@dimen/margim_default"
                    android:gravity="right|center_vertical"
                    android:text="@string/btn_detalhes"
                    android:textSize="@dimen/font_normal"
                    android:textColor="@color/red"
                    android:textStyle="bold"/>

            </LinearLayout>


        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/containerNovaTransacao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margim_small"
            android:elevation="2dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/bg_card"
                android:weightSum="2">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingRight="@dimen/margim_default"
                    android:paddingLeft="@dimen/margim_default"
                    android:paddingTop="@dimen/margim_default"
                    android:layout_marginBottom="@dimen/margim_big"
                    android:gravity="center_vertical">

                    <ImageView
                        android:id="@+id/icNovaTransacao"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_new_charge"/>

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@id/icNovaTransacao"
                        android:layout_marginLeft="@dimen/margim_default">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/dash_nova_transacao_title"
                            android:textColor="@color/red"
                            android:textSize="@dimen/font_extra_big"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/dash_nova_transacao_desc"
                            android:textColor="@color/red"
                            android:textSize="@dimen/font_normal"/>

                    </LinearLayout>

                </RelativeLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_size"
                    android:background="@drawable/margim_top_red_bg_default"
                    android:paddingRight="@dimen/margim_default"
                    android:gravity="right|center_vertical"
                    android:text="@string/btn_nova_transacao"
                    android:textSize="@dimen/font_normal"
                    android:textColor="@color/red"
                    android:textStyle="bold"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
