<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    tools:context="br.com.testepaggi.ui.view.activity.TransacaoActivity">

    <include layout="@layout/modal_toolbar_app" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/margim_big"
        android:padding="@dimen/margim_default">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:weightSum="2">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginRight="@dimen/margim_default"
                    android:text="@string/lbl_valor_total"
                    android:textSize="@dimen/font_title"
                    android:textColor="@color/colorPrimaryDark"/>

                <EditText
                    android:id="@+id/edtValor"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/edt_box_size"
                    android:layout_weight="1"
                    android:paddingLeft="@dimen/margim_small"
                    android:paddingRight="@dimen/margim_small"
                    android:textStyle="bold"
                    android:textSize="@dimen/font_normal"
                    android:textColor="@color/colorPrimaryDark"
                    android:maxLines="1"
                    android:inputType="number"
                    android:textCursorDrawable="@drawable/cursor"
                    android:background="@drawable/box_red_bg_default"
                    android:text="@string/amount_format"
                    android:gravity="right|center_vertical"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margim_default"
                android:gravity="center_vertical"
                android:weightSum="2">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginRight="@dimen/margim_default"
                    android:text="@string/lbl_total_parcelas"
                    android:textSize="@dimen/font_title"
                    android:textColor="@color/colorPrimaryDark"/>

                <RelativeLayout
                    android:id="@+id/containerSpinner"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/edt_box_size"
                    android:layout_weight="1"
                    android:paddingLeft="@dimen/margim_small"
                    android:paddingRight="@dimen/margim_small"
                    android:background="@drawable/box_red_bg_default">

                    <ImageButton
                        android:id="@+id/imgSpinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:src="@drawable/ic_expand_more_white_24dp"
                        android:tint="@color/colorPrimaryDark"
                        android:background="@android:color/transparent"/>

                    <Spinner
                        android:id="@+id/spParcelas"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_centerInParent="true"
                        android:spinnerMode="dropdown"
                        android:background="@android:color/transparent"/>

                </RelativeLayout>

            </LinearLayout>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</LinearLayout>
