<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/margim_default"
    android:paddingRight="@dimen/margim_default"
    android:background="@color/bg_card"
    android:weightSum="2">

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/margim_big"
        android:paddingBottom="@dimen/margim_default"
        android:layout_marginLeft="@dimen/margim_default">

        <TextView
            android:id="@+id/txData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/margim_small"
            android:background="@drawable/rounded_white_timeline"
            android:textColor="@color/white"
            android:layout_gravity="center_horizontal"
            android:textSize="@dimen/font_small"
            android:text="@string/default_var"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margim_default_extra"
            android:weightSum="2">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.2"
                android:layout_gravity="bottom"
                android:text="@string/transacao_valor"
                android:textSize="@dimen/font_normal"
                android:textStyle="normal"
                android:textColor="@color/grey"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
                android:gravity="right">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margim_small"
                    android:layout_gravity="bottom"
                    android:text="R$"
                    android:textSize="@dimen/font_normal"
                    android:textColor="@color/grey"/>

                <TextView
                    android:id="@+id/txValor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:layout_gravity="bottom"
                    android:layout_marginLeft="@dimen/margim_micro"
                    android:text="@string/default_var"
                    android:textSize="@dimen/font_big"
                    android:textColor="@color/grey"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/containerCompensacao"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margim_small"
            android:weightSum="2">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.2"
                android:layout_gravity="bottom"
                android:text="@string/transacao_data"
                android:textSize="@dimen/font_normal"
                android:textStyle="normal"
                android:textColor="@color/grey"/>

            <TextView
                android:id="@+id/txCompensacao"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
                android:gravity="right"
                android:layout_marginLeft="@dimen/margim_small"
                android:text="@string/default_var"
                android:textSize="@dimen/font_big"
                android:textColor="@color/grey"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margim_small"
            android:gravity="center_vertical|right"
            android:weightSum="2">

            <ImageView
                android:id="@+id/imgStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_check_white_24dp"/>

            <TextView
                android:id="@+id/txStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margim_micro"
                android:textColor="@color/grey"
                android:textSize="@dimen/font_title"
                android:text="@string/default_var"/>

        </LinearLayout>


    </LinearLayout>

</LinearLayout>